--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,6 +2,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="CSE340 | Simeon Chirunga">
     <title><%- title %>New 340 App</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/images/site/favicon-32x32.png">    
+    <link rel="stylesheet" href="/css/normalize.css" media="screen" />
+    <link rel="stylesheet" href="/css/styles.css" media="screen">
+    <link rel="stylesheet" href="/css/large.css" media="screen" />
+</head>
+
+<head>
+    
 </head>
