--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,11 +5,8 @@
     <meta name="description" content="CSE340 | Simeon Chirunga">
     <title><%- title %>New 340 App</title>
     <link rel="icon" href="/images/site/favicon-32x32.png">    
-    <link rel="stylesheet" href="/css/normalize.css" media="screen" />
+    <link rel="stylesheet" href="/css/normalize.css" media="screen" >
     <link rel="stylesheet" href="/css/styles.css" media="screen">
-    <link rel="stylesheet" href="/css/large.css" media="screen" />
+    <link rel="stylesheet" href="/css/large.css" media="screen" >
 </head>
 
-<head>
-    
-</head>
