--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -222,6 +222,130 @@ footer {
 
 }
 
+#inv-display {
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+  margin: 0 auto;
+  gap: 20px;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  align-items: center;
+  justify-items: center;
+
+}
+
+#inv-display li {
+  list-style: none;
+  border: 3px solid #00000056;
+  border-radius: 15px;
+  width: 70%;
+  text-align: center;
+  padding-bottom: 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 250px;
+  margin-left: 10%;
+}
+
+#inv-display li:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+#inv-display li h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: .8rem;
+}
+
+#inv-display li img {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  border-radius: 13px;
+  max-height: 130px;
+}
+
+#inv-display li a {
+  max-height: 90px;
+}
+
+
+#inv-display li hr {
+  height: 6px;
+  background-color: #000;
+}
+
+#container-detail {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 auto;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#detail-content1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 auto;
+}
+
+#detail-content1 img {
+  width: 80%;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+#detail-content2 {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 auto;
+  text-align: left;
+  margin: 11px;
+  margin-top: 5%;
+  background-color: antiquewhite;
+  border-radius: 10px;
+}
+
+#detail-content2 h2 {
+  margin: 11px;
+  font-size: 1.2rem;
+}
+
+#detail-content2 span {
+  font-weight: bolder;
+  font-size: 1rem;
+  color: #01183c;
+}
+
+#detail-content2 #price {
+  margin-left: 8%;
+  padding: 3px;
+  font-size: 1.2rem;
+  color: rgb(0, 79, 0);
+}
+
+#detail-content2 p {
+  font-size: .9rem;
+  margin-left: 8%;
+  padding: 3px;
+  width: 80%;
+}
+
+#error-message {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0 auto;
+  margin: 10px;
+  color: rgb(255, 255, 255); }
+
+
+    #crash {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; }
+
 @media only screen and (min-width: 35rem) {
   #tools a {
 
@@ -331,27 +455,7 @@ footer {
     font-size: 1.4rem;
   }
 
-  #login-form {
-    width: 80%;
-    margin: 0 auto;
-  }
-
-  #login-form input {
-    padding: 1rem;
-  }
-
-  #login-form #check {
-
-    font-size: 1.2rem;
-
-  }
-
-  #check input {
-    width: 5%;
-  }
-
 }
-
 @media only screen and (min-width: 64rem) {
 
   html {
@@ -446,6 +550,5 @@ footer {
     width: 90%;
 
   }
-
- 
 }
+
