--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -214,12 +214,17 @@ footer {
   text-align: center;
   font-weight: bolder;
   font-family: 'Montserrat', sans-serif;
-  background-color: #0d6e92;
+  background-color: #0d6e92; 
   color: #fff;
   padding-top: 5px;
   padding-bottom: 5px;
   margin-top: 15px;
 
+}
+a.my-error-link {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
 }
 
 #inv-display {
@@ -528,6 +533,7 @@ footer {
     width: 100%;
 
   }
+ 
 
   #items div {
     text-align: center;
