--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,5 +3,6 @@ let year=d.getFullYear() %>
     <footer>
         
         <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+        <a class="my-error-link" href="/simeon/intentional/error"> Error Link</a>
         
     </footer>
