--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <h1>Welcome to CSE Motors!</h1>
+
+<%- messages() %>
+
 <div id="car-info">
     <img id="delorean" src="/images/vehicles/delorean.jpg" alt="a gray car">
     <div id="own-today">
