--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,32 @@
+.open-sans {
+  font-family: "Open Sans", sans-serif;
+  
+  font-weight:bold ;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+.raleway {
+  font-family: "Raleway", sans-serif;
+ 
+  font-weight: bold;
+  font-style: normal;
+}
+
+.montserrat{
+  font-family: "Montserrat", sans-serif;
+ 
+  font-weight:lighter;
+  font-style: normal;
+}
+
+
+
+/* === BASE STYLES === */
 *,
-*:before,
-*:after {
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -8,8 +34,10 @@ body {
   margin: 0 auto;
   max-width: 760px;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
+/* === HEADER STYLES === */
 .siteName a {
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
@@ -31,7 +59,6 @@ body {
   text-decoration: none;
   font-size: 0.9rem;
   color: #000;
-  float: right;
   margin-right: 10px;
   margin-top: -6%;
 }
@@ -44,37 +71,32 @@ h1 {
   margin-top: 6%;
 }
 
+/* === NAVIGATION === */
 nav ul {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  list-style-type: none;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  display:grid;
+  grid-template-columns: repeat(6, 1fr);
+  
+  list-style: none;
+  padding: 15px 10px;
   margin: 10px;
   margin-top: 10%;
-  min-width: 15px;
-  min-height: 15px;
-  justify-content: space-evenly;
-  background-color: #000000; 
+  background-color: #000;
   text-align: center;
-}
-
-nav ul li a:hover {
-  color: #00bbff;
 }
 
 nav ul li a {
   text-decoration: none;
   font-family: 'Montserrat', sans-serif;
   font-size: 1rem;
-  list-style-type: none;
   color: #fff;
   cursor: pointer;
 }
 
+nav ul li a:hover {
+  color: #00bbff;
+}
 
+/* === MAIN CONTENT === */
 #car-info {
   display: grid;
   grid-template-columns: 1fr;
@@ -95,13 +117,13 @@ nav ul li a {
 }
 
 #own-today h2 {
-  font-weight: bolder;
   font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
 }
 
 #own-today p {
-  font-weight: 700;
   font-family: 'Raleway', sans-serif;
+  font-weight: 700;
 }
 
 #own-today button {
@@ -112,9 +134,13 @@ nav ul li a {
   color: #fff;
   padding: 10px 15px;
   cursor: pointer;
-
 }
 
+#own-today button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  color: #000;
+}
 
 #delorean {
   width: 80%;
@@ -124,12 +150,7 @@ nav ul li a {
   grid-row: 1/2;
 }
 
-#own-today button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
-  color: #000;
-}
-
+/* === REVIEWS & UPGRADES === */
 #container {
   display: grid;
   grid-template-columns: 1fr;
@@ -169,12 +190,10 @@ nav ul li a {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   margin: 0 auto;
-
 }
 
 #items div {
   text-align: center;
-
 }
 
 #items div>div {
@@ -198,35 +217,12 @@ nav ul li a {
   width: 44%;
 }
 
-#items div a {
-
-  text-align: center;
-
-}
-
 #items div img {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   width: 50%;
 }
 
-footer {
-  text-align: center;
-  font-weight: bolder;
-  font-family: 'Montserrat', sans-serif;
-  background-color: #0d6e92; 
-  color: #fff;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 15px;
-
-}
-a.my-error-link {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
-}
-
+/* === INVENTORY DISPLAY === */
 #inv-display {
   display: grid;
   grid-template-columns: 1fr;
@@ -237,15 +233,13 @@ a.my-error-link {
   margin-bottom: 10%;
   align-items: center;
   justify-items: center;
-
 }
 
 #inv-display li {
   list-style: none;
-  border: 3px solid #00000056;
+  border: 3px solid rgba(0, 0, 0, 0.34);
   border-radius: 15px;
   width: 70%;
-  text-align: center;
   padding-bottom: 10px;
   display: grid;
   grid-template-columns: 1fr;
@@ -260,27 +254,22 @@ a.my-error-link {
 
 #inv-display li h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 #inv-display li img {
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
   width: 100%;
   border-radius: 13px;
   max-height: 130px;
 }
-
-#inv-display li a {
-  max-height: 90px;
-}
-
 
 #inv-display li hr {
   height: 6px;
   background-color: #000;
 }
 
+/* === DETAIL VIEW === */
 #container-detail {
   display: grid;
   grid-template-columns: 1fr;
@@ -303,12 +292,11 @@ a.my-error-link {
 #detail-content2 {
   display: grid;
   grid-template-columns: 1fr;
-  margin: 0 auto;
-  text-align: left;
   margin: 11px;
   margin-top: 5%;
   background-color: antiquewhite;
   border-radius: 10px;
+  text-align: left;
 }
 
 #detail-content2 h2 {
@@ -317,6 +305,7 @@ a.my-error-link {
 }
 
 #detail-content2 span {
+  font-family: 'Montserrat', sans-serif;
   font-weight: bolder;
   font-size: 1rem;
   color: #01183c;
@@ -330,52 +319,147 @@ a.my-error-link {
 }
 
 #detail-content2 p {
-  font-size: .9rem;
+  font-size: 0.9rem;
   margin-left: 8%;
   padding: 3px;
   width: 80%;
 }
 
+/* === ERROR STYLES === */
 #error-message {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
   text-align: center;
-  margin: 0 auto;
   margin: 10px;
-  color: rgb(255, 255, 255); }
+  color: rgb(255, 255, 255);
+}
 
+#crash {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
-    #crash {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center; }
+#crash img {
+  width: 70%;
+}
 
+.notice {
+  color: rgb(151, 0, 0);
+}
+
+.notice li {
+  color: red;
+  font-style: italic;
+  list-style: none;
+  margin: auto;
+}
+
+/* === FORM STYLES === */
+.account-form,
+.management-form,
+#login-form,
+#registration-form,
+#add-classification,
+#add-inventory {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Montserrat', sans-serif;
+  margin: 20px;
+}
+
+fieldset {
+  margin: 2rem 0;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 0.5rem 2%;
+  background-color: #0d6e92;
+}
+
+label {
+  display: block;
+  text-align: left;
+  padding-top: 1rem;
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  margin: 15px;
+}
+
+input,
+textarea,
+select {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
+
+input[type="submit"],
+.login-btn,
+.buttons {
+  width: 30%;
+  text-align: center;
+  margin: 10px auto;
+  cursor: pointer;
+  padding: 5px 3px;
+}
+
+input[type="submit"]:hover,
+.login-btn:hover,
+.buttons:hover {
+  background-color: #0d6e92;
+  color: #fff;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24);
+}
+
+input:required:not(:placeholder-shown):invalid,
+input:focus:invalid {
+  border-left: 3px solid red;
+}
+
+input:required:not(:placeholder-shown):valid {
+  border-left: 2px solid green;
+}
+
+/* === FOOTER === */
+footer {
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+  background-color: #0d6e92;
+  color: #fff;
+  padding: 5px;
+  margin-top: 15px;
+}
+
+a.my-error-link,
+footer #errorTest {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+}
+
+footer #errorTest:hover {
+  color: yellow;
+}
+
+/* === MEDIA QUERIES === */
+/* === MEDIA QUERIES === */
 @media only screen and (min-width: 35rem) {
+  
   #tools a {
-
     font-size: 1.1rem;
-
-    float: right;
     margin-right: 12px;
     margin-top: -2%;
   }
 
-
   .siteName a {
-
     font-size: 2rem;
-    font-weight: bold;
-    position: relative;
     top: 35px;
-    left: 10px;
-  }
-
-  nav ul {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    text-align: center;
-    line-height: 30px;
   }
 
   h1 {
@@ -383,29 +467,15 @@ a.my-error-link {
   }
 
   #own-today {
-    margin-top: 7%;
     width: 200px;
     height: 180px;
-
+    margin-top: 7%;
   }
 
-  #own-today h2 {
-    font-size: 1.4rem;
-  }
-
-  #own-today p {
-    font-size: 1.4rem;
-  }
-
+  #own-today h2,
+  #own-today p,
   #own-today button {
     font-size: 1.4rem;
-    padding: 10px 15px;
-
-  }
-
-  #items div img {
-
-    width: 50%;
   }
 
   #items div a {
@@ -414,21 +484,12 @@ a.my-error-link {
 
   #items div {
     width: 80%;
-
   }
 
-  #upgrades h3 {
-    font-size: 1.4rem;
-    margin-left: 1%;
-  }
-
+  #upgrades h3,
   #reviews h3 {
     font-size: 1.4rem;
     margin-left: 1%;
-  }
-
-  #reviews ul {
-    margin-top: -1%;
   }
 
   #reviews ul li {
@@ -436,8 +497,7 @@ a.my-error-link {
   }
 
   #inv-display {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   #inv-display li {
@@ -447,60 +507,72 @@ a.my-error-link {
 
   #detail-content2 p {
     font-size: 1rem;
-
   }
 
   #detail-content2 span {
-
     font-size: 1.1rem;
-
   }
 
   #error-message {
     font-size: 1.4rem;
   }
 
-}
-@media only screen and (min-width: 64rem) {
-
-  html {
-    background-image: url("/images/site/small_check.jpg");
+  #login-form,
+  #registration-form,
+  #add-classification,
+  #add-inventory {
+    width: 80%;
+    margin: 0 auto;
   }
 
-  body {
-    background-color: #fff;
-    margin-top: 1%;
-    border: 5px solid #0791ec;
-    margin-bottom: 1%;
-    border-radius: 1%;
+  input,
+  textarea {
+    padding: 1rem;
+  }
+
+  #check,
+  #check2 {
+    font-size: 1.2rem;
+  }
+
+  #check input,
+  #check2 input {
+    width: 5%;
+  }
+
+  #add-inventory select {
+    width: 50%;
+  }
+}
+
+
+ @media only screen and (min-width: 64rem) {
+   html {
+     background-image: url("/images/site/small_check.jpg");
+   }
+
+   body {
+     background-color: #fff;
+     margin: 1% auto;
+     border: 0.3125rem solid #0791ec;
+     /* converted to rem */
+     border-radius: 1%;
+   
   }
 
   #own-today {
-
     width: 230px;
     height: 218px;
-
-
   }
 
-  #own-today h2 {
-    font-size: 1.8rem;
-  }
-
-  #own-today p {
-    font-size: 1.8rem;
-  }
-
+  #own-today h2,
+  #own-today p,
   #own-today button {
     font-size: 1.8rem;
-    padding: 10px 15px;
-
   }
 
   #container {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-top: 7%;
   }
 
   #upgrades {
@@ -523,43 +595,39 @@ a.my-error-link {
     font-size: 1.7rem;
   }
 
-  #items div img {
-
-    width: 50%;
-  }
-
-  #items div>div {
-    margin: 10px;
-    width: 100%;
-
-  }
- 
-
-  #items div {
-    text-align: center;
-  }
-
   #items div a {
     font-size: 1.2rem;
     margin-left: 10%;
   }
 
   #container-detail {
-    display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 0 auto;
-    font-family: 'Montserrat', sans-serif;
   }
 
   #detail-content1 img {
     margin-top: 5%;
     width: 90%;
+  }
 
+  #error-message {
+    font-size: 1.5rem;
+    color: rgb(162, 7, 7);
+  }
+
+  #login-form .login-btn,
+  #registration-form .login-btn,
+  #add-classification .login-btn,
+  #add-inventory .login-btn {
+    font-size: 1.1rem;
+  }
+
+  #check,
+  #check2 {
+    font-size: 1rem;
+  }
+
+  #check input,
+  #check2 input {
+    width: 4%;
   }
 }
-
-ul.notice {
-  color: red;
-  font-style: italic;
-}
-
