--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,32 +1,7 @@
-.open-sans {
-  font-family: "Open Sans", sans-serif;
-  
-  font-weight:bold ;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
-
-.raleway {
-  font-family: "Raleway", sans-serif;
- 
-  font-weight: bold;
-  font-style: normal;
-}
-
-.montserrat{
-  font-family: "Montserrat", sans-serif;
- 
-  font-weight:lighter;
-  font-style: normal;
-}
-
-
-
-/* === BASE STYLES === */
+/******* Change Box Model ***************/
 *,
-*::before,
-*::after {
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -34,10 +9,8 @@ body {
   margin: 0 auto;
   max-width: 760px;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
 }
 
-/* === HEADER STYLES === */
 .siteName a {
   font-family: 'Montserrat', sans-serif;
   text-decoration: none;
@@ -59,6 +32,7 @@ body {
   text-decoration: none;
   font-size: 0.9rem;
   color: #000;
+  float: right;
   margin-right: 10px;
   margin-top: -6%;
 }
@@ -71,32 +45,39 @@ h1 {
   margin-top: 6%;
 }
 
-/* === NAVIGATION === */
+
+
+
 nav ul {
-  display:grid;
-  grid-template-columns: repeat(6, 1fr);
-  
-  list-style: none;
-  padding: 15px 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style-type: none;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   margin: 10px;
   margin-top: 10%;
-  background-color: #000;
+  justify-content: space-between;
+  background-color: #000000;
   text-align: center;
-}
-
-nav ul li a {
-  text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1rem;
-  color: #fff;
-  cursor: pointer;
 }
 
 nav ul li a:hover {
   color: #00bbff;
 }
 
-/* === MAIN CONTENT === */
+nav ul li a {
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1rem;
+  list-style-type: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+
+
 #car-info {
   display: grid;
   grid-template-columns: 1fr;
@@ -117,13 +98,13 @@ nav ul li a:hover {
 }
 
 #own-today h2 {
-  font-family: 'Montserrat', sans-serif;
   font-weight: bolder;
+  font-family: 'Montserrat', sans-serif;
 }
 
 #own-today p {
-  font-family: 'Raleway', sans-serif;
   font-weight: 700;
+  font-family: 'Raleway', sans-serif;
 }
 
 #own-today button {
@@ -134,13 +115,9 @@ nav ul li a:hover {
   color: #fff;
   padding: 10px 15px;
   cursor: pointer;
+
 }
 
-#own-today button:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 50px 0 rgba(0, 0, 0, 0.19);
-  color: #000;
-}
 
 #delorean {
   width: 80%;
@@ -150,7 +127,12 @@ nav ul li a:hover {
   grid-row: 1/2;
 }
 
-/* === REVIEWS & UPGRADES === */
+#own-today button:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  color: #000;
+}
+
 #container {
   display: grid;
   grid-template-columns: 1fr;
@@ -190,10 +172,12 @@ nav ul li a:hover {
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   margin: 0 auto;
+
 }
 
 #items div {
   text-align: center;
+
 }
 
 #items div>div {
@@ -207,6 +191,7 @@ nav ul li a:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
   border-radius: 5px;
+
 }
 
 #container #fire {
@@ -217,12 +202,30 @@ nav ul li a:hover {
   width: 44%;
 }
 
+#items div a {
+
+  text-align: center;
+
+}
+
 #items div img {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
 }
 
-/* === INVENTORY DISPLAY === */
+footer {
+  text-align: center;
+  font-weight: bolder;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #0d6e92;
+  color: #fff;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 15px;
+
+}
+
 #inv-display {
   display: grid;
   grid-template-columns: 1fr;
@@ -231,15 +234,15 @@ nav ul li a:hover {
   gap: 20px;
   margin-top: 10%;
   margin-bottom: 10%;
-  align-items: center;
-  justify-items: center;
+
 }
 
 #inv-display li {
   list-style: none;
-  border: 3px solid rgba(0, 0, 0, 0.34);
+  border: 3px solid #00000056;
   border-radius: 15px;
   width: 70%;
+  text-align: center;
   padding-bottom: 10px;
   display: grid;
   grid-template-columns: 1fr;
@@ -254,22 +257,27 @@ nav ul li a:hover {
 
 #inv-display li h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 0.8rem;
+  font-size: .8rem;
 }
 
 #inv-display li img {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   border-radius: 13px;
   max-height: 130px;
 }
+
+#inv-display li a {
+  max-height: 90px;
+}
+
 
 #inv-display li hr {
   height: 6px;
   background-color: #000;
 }
 
-/* === DETAIL VIEW === */
 #container-detail {
   display: grid;
   grid-template-columns: 1fr;
@@ -277,99 +285,33 @@ nav ul li a:hover {
   font-family: 'Montserrat', sans-serif;
 }
 
-#detail-content1 {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: 0 auto;
-}
 
-#detail-content1 img {
-  width: 80%;
-  margin: 0 auto;
-  border-radius: 10px;
-}
 
-#detail-content2 {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin: 11px;
-  margin-top: 5%;
-  background-color: antiquewhite;
-  border-radius: 10px;
-  text-align: left;
-}
 
-#detail-content2 h2 {
-  margin: 11px;
-  font-size: 1.2rem;
-}
-
-#detail-content2 span {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bolder;
-  font-size: 1rem;
-  color: #01183c;
-}
-
-#detail-content2 #price {
-  margin-left: 8%;
-  padding: 3px;
-  font-size: 1.2rem;
-  color: rgb(0, 79, 0);
-}
-
-#detail-content2 p {
-  font-size: 0.9rem;
-  margin-left: 8%;
-  padding: 3px;
-  width: 80%;
-}
-
-/* === ERROR STYLES === */
 #error-message {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
   text-align: center;
+  margin: 0 auto;
   margin: 10px;
-  color: rgb(255, 255, 255);
+  color: rgb(162, 7, 7);
 }
 
-#crash {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
+footer #errorTest {
+  color: white;
 }
 
-#crash img {
-  width: 70%;
+footer #errorTest:hover {
+  color: yellow;
 }
 
-.notice {
-  color: rgb(151, 0, 0);
-}
-
-.notice li {
-  color: red;
-  font-style: italic;
-  list-style: none;
-  margin: auto;
-}
-
-/* === FORM STYLES === */
-.account-form,
-.management-form,
-#login-form,
-#registration-form,
-#add-classification,
-#add-inventory {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Montserrat', sans-serif;
+#login-form {
   margin: 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 
-fieldset {
+#login-form fieldset {
   margin: 2rem 0;
   border: 1px solid #000;
   border-radius: 10px;
@@ -377,7 +319,7 @@ fieldset {
   background-color: #0d6e92;
 }
 
-label {
+#login-form label {
   display: block;
   text-align: left;
   padding-top: 1rem;
@@ -387,79 +329,427 @@ label {
   margin: 15px;
 }
 
-input,
-textarea,
-select {
+#login-form input {
   display: block;
   padding: 0.75rem;
   width: 100%;
   border-radius: 10px;
   border: none;
-  outline: none;
 }
 
-input[type="submit"],
-.login-btn,
-.buttons {
+#login-form .login-btn {
   width: 30%;
   text-align: center;
-  margin: 10px auto;
+  margin: 0 auto;
   cursor: pointer;
-  padding: 5px 3px;
 }
 
-input[type="submit"]:hover,
-.login-btn:hover,
-.buttons:hover {
+#login-form .login-btn:hover {
   background-color: #0d6e92;
   color: #fff;
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24);
 }
 
-input:required:not(:placeholder-shown):invalid,
-input:focus:invalid {
-  border-left: 3px solid red;
-}
-
-input:required:not(:placeholder-shown):valid {
-  border-left: 2px solid green;
-}
-
-/* === FOOTER === */
-footer {
+#login-form h2 {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: bolder;
-  background-color: #0d6e92;
   color: #fff;
-  padding: 5px;
-  margin-top: 15px;
+  font-size: 1.2rem;
 }
 
-a.my-error-link,
-footer #errorTest {
-  text-decoration: none;
+#login-form a {
+  color: #fff;
+}
+
+#login-form #check {
+  display: flex;
+  font-size: 1rem;
+  margin: 15px;
   color: #fff;
   font-weight: bold;
 }
 
-footer #errorTest:hover {
-  color: yellow;
+
+#login-form input:required {
+  border-left: red solid 6px;
 }
 
-/* === MEDIA QUERIES === */
-/* === MEDIA QUERIES === */
+#login-form input:required:valid {
+  border-left: green solid 6px;
+}
+
+
+/* REGISTRATION FORM */
+
+#registration-form {
+  margin: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#registration-form fieldset {
+  margin: 2rem 0;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 0.5rem 2%;
+  background-color: #0d6e92;
+}
+
+#registration-form label {
+  display: block;
+  text-align: left;
+  padding-top: 1rem;
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  margin: 15px;
+}
+
+#registration-form input {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+}
+
+#registration-form .login-btn {
+  width: 30%;
+  text-align: center;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#registration-form .login-btn:hover {
+  background-color: #0d6e92;
+  color: #fff;
+}
+
+
+#registration-form #check2 {
+  display: flex;
+  font-size: 1rem;
+  margin: 15px;
+  color: #fff;
+  font-weight: bold;
+}
+
+
+#messages {
+  color: rgb(162, 7, 7);
+  font-family: 'Montserrat', sans-serif;
+  width: 90%;
+}
+
+
+
+#registration-form input:required {
+  border-left: red solid 6px;
+}
+
+#registration-form input:required:valid {
+  border-left: green solid 6px;
+}
+
+
+
+
+
+/* --- ADD CLASSIFICATION FORM --- */
+
+#add-classification {
+  margin: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#add-classification fieldset {
+  margin: 2rem 0;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 0.5rem 2%;
+  background-color: #0d6e92;
+}
+
+#add-classification label {
+  display: block;
+  text-align: left;
+  padding-top: 1rem;
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  margin: 15px;
+}
+
+#add-classification input {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+}
+
+#add-classification .login-btn {
+  width: 30%;
+  text-align: center;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#add-classification .login-btn:hover {
+  background-color: #0d6e92;
+  color: #fff;
+}
+
+#add-classification input:required {
+  border-left: red solid 6px;
+}
+
+#add-classification input:required:valid {
+  border-left: green solid 6px;
+}
+
+
+
+
+
+/* --- ADD INVENTORY FORM --- */
+
+#add-inventory {
+  margin: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+#add-inventory fieldset {
+  margin: 2rem 0;
+  border: 1px solid #000;
+  border-radius: 10px;
+  padding: 0.5rem 2%;
+  background-color: #0d6e92;
+}
+
+#add-inventory label {
+  display: block;
+  text-align: left;
+  padding-top: 1rem;
+  color: #fff;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  margin: 15px;
+}
+
+#add-inventory input {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+}
+
+#add-inventory textarea {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+  resize: none;
+}
+
+#add-inventory select {
+  display: block;
+  padding: 0.75rem;
+  width: 100%;
+  border-radius: 10px;
+  border: none;
+}
+
+#add-inventory .login-btn {
+  width: 30%;
+  text-align: center;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+#add-inventory .login-btn:hover {
+  background-color: #0d6e92;
+  color: #fff;
+}
+
+#add-inventory input:required {
+  border-left: red solid 6px;
+}
+
+#add-inventory input:required:valid {
+  border-left: green solid 6px;
+}
+
+
+
+table td {
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+}
+
+table a:hover {
+  color: red;
+}
+
+.buttons {
+  width: 30%;
+  text-align: center;
+  margin-left: 3%;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 5px;
+}
+
+.buttons:hover {
+  background-color: #0d6e92;
+  color: #fff;
+}
+
+hr {
+  width: 90%;
+  background-color: #000;
+  height: 3px;
+}
+
+
+
+/* Account Login/Creation Styles */
+.account-form {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
+}
+
+.account-form label,
+.account-form input,
+.account-form p {
+  width: 80%;
+  margin: auto;
+}
+
+.account-form input {
+  border-radius: 4px;
+  padding: 3px;
+}
+
+.form-label {
+  text-align: center;
+}
+
+.account-form input[type="submit"] {
+  margin: 10px auto;
+  width: 100px;
+  padding: 5px 3px;
+}
+
+
+/* Management Styles */
+.management-form {
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
+  width: 80%;
+  margin: auto;
+}
+
+.management-form button {
+  padding: 7px 5px;
+  margin: 10px auto;
+}
+
+.management-form input:required:not(:placeholder-shown):invalid,
+.management-form input:focus:invalid {
+  border: 3px solid red;
+  outline: none;
+}
+
+.management-form input:required:not(:placeholder-shown):valid {
+  border: 2px solid green;
+  outline: none;
+}
+
+.management-form input,
+.management-form select,
+.management-form textarea {
+  border-radius: 4px;
+  padding: 3px;
+  outline: none;
+}
+
+.management-links {
+  display: flex;
+  justify-content: space-around;
+  margin: 40px auto;
+}
+
+.management-links a {
+  text-decoration: none;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 4px;
+  text-decoration: none;
+  color: black;
+  padding: 5px 10px;
+  border-radius: 4px;
+  transition: 0.05s;
+  border: 1px solid black;
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.management-links a:hover {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+
+/* Flash message and notice styles */
+.flash-message {
+  margin: auto;
+}
+
+ 
+/* Footer Styles */
+footer {
+  margin-top: 50px;
+  padding: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/******* MEDIA QUERY *******/
+
 @media only screen and (min-width: 35rem) {
-  
   #tools a {
+
     font-size: 1.1rem;
+
+    float: right;
     margin-right: 12px;
     margin-top: -2%;
   }
 
+
   .siteName a {
+
     font-size: 2rem;
+    font-weight: bold;
+    position: relative;
     top: 35px;
+    left: 10px;
+  }
+
+  nav ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    line-height: 30px;
   }
 
   h1 {
@@ -467,15 +757,34 @@ footer #errorTest:hover {
   }
 
   #own-today {
+    margin-top: 7%;
     width: 200px;
     height: 180px;
-    margin-top: 7%;
+
   }
 
-  #own-today h2,
-  #own-today p,
+  #own-today h2 {
+    font-size: 1.4rem;
+  }
+
+  #own-today p {
+    font-size: 1.4rem;
+  }
+
   #own-today button {
     font-size: 1.4rem;
+    padding: 10px 15px;
+
+  }
+
+
+
+
+
+
+  #items div img {
+
+    width: 50%;
   }
 
   #items div a {
@@ -484,12 +793,21 @@ footer #errorTest:hover {
 
   #items div {
     width: 80%;
+
   }
 
-  #upgrades h3,
+  #upgrades h3 {
+    font-size: 1.4rem;
+    margin-left: 1%;
+  }
+
   #reviews h3 {
     font-size: 1.4rem;
     margin-left: 1%;
+  }
+
+  #reviews ul {
+    margin-top: -1%;
   }
 
   #reviews ul li {
@@ -497,7 +815,8 @@ footer #errorTest:hover {
   }
 
   #inv-display {
-    grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   #inv-display li {
@@ -507,72 +826,131 @@ footer #errorTest:hover {
 
   #detail-content2 p {
     font-size: 1rem;
+
   }
 
   #detail-content2 span {
+
     font-size: 1.1rem;
+
   }
 
   #error-message {
     font-size: 1.4rem;
   }
 
-  #login-form,
-  #registration-form,
-  #add-classification,
+  #login-form {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #login-form input {
+    padding: 1rem;
+  }
+
+  #login-form #check {
+
+    font-size: 1.2rem;
+
+  }
+
+ 
+
+  /* REGISTRATION FORM */
+
+  #registration-form {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #registration-form input {
+    padding: 1rem;
+  }
+
+ 
+
+ 
+
+  #add-classification {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  #add-classification input {
+    padding: 1rem;
+  }
+
   #add-inventory {
     width: 80%;
     margin: 0 auto;
   }
 
-  input,
-  textarea {
+  #add-inventory input {
     padding: 1rem;
-  }
-
-  #check,
-  #check2 {
-    font-size: 1.2rem;
-  }
-
-  #check input,
-  #check2 input {
-    width: 5%;
   }
 
   #add-inventory select {
     width: 50%;
   }
+
+  .buttons {
+    width: 20%;
+    text-align: center;
+    margin-left: 2%;
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
+
+  }
+
+  .buttons:hover {
+    background-color: #0d6e92;
+    color: #fff;
+  }
+
 }
+  
 
+@media only screen and (min-width: 64rem) {
 
- @media only screen and (min-width: 64rem) {
-   html {
-     background-image: url("/images/site/small_check.jpg");
-   }
+  html {
+    background-image: url("/images/site/small_check.jpg");
+  }
 
-   body {
-     background-color: #fff;
-     margin: 1% auto;
-     border: 0.3125rem solid #0791ec;
-     /* converted to rem */
-     border-radius: 1%;
-   
+  body {
+    background-color: #fff;
+    margin-top: 1%;
+    border: 5px solid #0791ec;
+    margin-bottom: 1%;
+    border-radius: 1%;
   }
 
   #own-today {
+
     width: 230px;
     height: 218px;
+
+
   }
 
-  #own-today h2,
-  #own-today p,
-  #own-today button {
+  #own-today h2 {
     font-size: 1.8rem;
   }
 
+  #own-today p {
+    font-size: 1.8rem;
+  }
+
+  #own-today button {
+    font-size: 1.8rem;
+    padding: 10px 15px;
+
+  }
+
   #container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-top: 7%;
   }
 
   #upgrades {
@@ -595,39 +973,72 @@ footer #errorTest:hover {
     font-size: 1.7rem;
   }
 
+  #items div img {
+
+    width: 50%;
+  }
+
+  #items div>div {
+    margin: 10px;
+    width: 100%;
+
+
+
+
+  }
+
+  #items div {
+    text-align: center;
+  }
+
   #items div a {
     font-size: 1.2rem;
     margin-left: 10%;
   }
 
-  #container-detail {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  #detail-content1 img {
-    margin-top: 5%;
-    width: 90%;
-  }
-
   #error-message {
+
     font-size: 1.5rem;
     color: rgb(162, 7, 7);
   }
 
-  #login-form .login-btn,
-  #registration-form .login-btn,
-  #add-classification .login-btn,
+  #login-form {
+    font-size: 1.1rem;
+  }
+
+  
+
+  
+  /* REGISTRATION FORM */
+
+
+
+  #registration-form .login-btn {
+    font-size: 1.1rem;
+  }
+
+  
+
+ 
+
+  #add-classification .login-btn {
+    font-size: 1.1rem;
+  }
+
   #add-inventory .login-btn {
     font-size: 1.1rem;
   }
 
-  #check,
-  #check2 {
-    font-size: 1rem;
+  #add-inventory select {
+    width: 50%;
   }
 
-  #check input,
-  #check2 input {
-    width: 4%;
+  nav ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
   }
 }
+
+ 
+
