--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -9,3 +9,15 @@
             <a href="/inv/add-classification">Add New Classification</a>
             <a href="/inv/add-inventory">Add New Inventory</a>
             </div>
+        
+            <h2>Manage Inventory</h2>
+            
+            <p>Choose a classificaton to see those inventory items</p>
+            <%- classificationSelect %>
+
+
+                <table id="inventoryDisplay"> </table>
+
+            <noscript> Javascript must be enabled to use this page</noscript>
+
+            <script src="../../js/inventory.js"></script>
