--- a/views/account/update.ejs
+++ b/views/account/update.ejs
@@ -16,7 +16,7 @@
                 </ul>
                 <% } %>
 
-                    <form id="updateAccount" action="/account" method="post">
+                    <form id="updateAccount" action="/update" method="post">
                         <fieldset>
                             <label>
                                 First name:
